2008-08-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/bot.py: only chdir() once we are sure the directory
	exists.

2008-08-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/config.py: create python site-packages directories under
	jhbuild prefix as they won't be created by distutils.

2008-08-13  Matthias Clasen  <mclasen@redhat.com>

	* modulesets/gnome-external-deps-2.24.modules: update dbus to 1.2.3

2008-08-13  William Jon McCann  <jmccann@redhat.com>

	* modulesets/bootstrap.modules: updated autoconf to 2.62 since it is
	now required by some modules (closes: #547676)

2008-08-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/__init__.py, jhbuild/buildbot/factory.py,
	jhbuild/buildbot/status/web/__init__.py, jhbuild/commands/bot.py:
	added a new jhbuild bot --start-server command to start the buildbot
	server; moved custom buildbot modules from buildbot/jhbuildbot/ to
	jhbuild/buildbot/.

2008-08-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/bot.py: don't call os.makedirs() when path already
	exists.

2008-08-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/bot.py: updated to work with jhbuildbot installed
	twisted and buildbot.

2008-08-13  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-suites-2.24.modules: Metacity has
	branched for gnome-2-24.

2008-08-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/defaults.jhbuildrc: added missing jhbuildbot slave options.

2008-08-13  Frederic Peters  <fpeters@0d.be>

	* buildbot/: buildbot master server.

2008-08-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/bot.py, jhbuild/config.py: jhbuild bot --start
	command, to start a slave buildbot; and jhbuild bot --step command
	to execute buildbot steps.

2008-08-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/utils/trayicon.py, tests/mock.py: updated for new check
	options, and workaround zenity failing with fake stdin/stdout.

2008-08-13  Frederic Peters  <fpeters@0d.be>
