@@ -1,5 +1,11 @@
 2008-08-14  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/buildbot/steps.py, jhbuild/commands/bot.py: make the jhbuild
+	config instance accessible to all buildbot stuff (necessary to get
+	slaves with jhbuildrc != ~/.jhbuildrc working).
+
+2008-08-14  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/commands/bot.py: only chdir() once we are sure the directory
 	exists.
 
